# hivemind

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE-AI.md  CLAUDE.md  CLEANUP.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Hivemind.bat  LICENSE  MAP.md  MODEL-SHIMS.md  PRODUCT-GUIDE.md  README.md  ROLES.md  SPRINT.md  VISION.md  hivemind-sdk-v2.py  hivemind-sdk.py  package-lock.json  pyproject.toml  requirements-sdk.txt  requirements.txt  start-hivemind.bat  test-sdk.py
.claude/: agent-settings.json  settings.json  settings.local.json
.claude/hooks/: post-tool-capture.sh  pre-compact-memory.sh  pre-tool-audit.sh  session-start.sh
.github/workflows/: ci.yml  release.yml
.squidrun/: protected-files.json
benchmarks/: README.md
docs/: agent-templates.md  architecture.md  background-builder-agents-spec.md  development.md  event-kernel-spec.md  failure-modes.md  github-integration-spec.md  instance-mapping.md  plugins.md  protocol-spec.md  team-memory-spec.md  transition-ledger-spec.md  triggers.md
docs/agents/: reviewer.md  (+1 more)
knowledge/: visual-capture-playwright.md
relay/: README.md  package-lock.json  package.json  server.js
roles/: orchestrator.md
scripts/: pre-commit.sh
tests/: test-serialization.py
ui/: config.js  daemon-client.js  eslint.config.js  index.html  jest.config.js  jsconfig.json  main.js  mcp-server.js  package-lock.json  package.json  pane-host-renderer.js  pane-host.html  preload.js  renderer.js  sdk-mode-ui-review.md  supervisor-daemon.js  terminal-daemon.js
workspace/: DISCOVERY-messaging.md  app-status.json  checkpoint-approved.md  checkpoint.md  current_state.md  feedback.md  improvements.md  memory.md  plan-approved.md  plan.md  references.md  research-notes.md  review.json  session-handoff.json  shared-agent-rules.md  shared_context.md  shared_context_archive.md  user-profile.json
(+753 files in other folders)
